# serializer version: 1
# name: test_base_color_element_add_lum_mod
  '''
  <a:schemeClr xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" val="bg1">
    <a:lumMod val="75000"/>
  </a:schemeClr>
  
  '''
# ---
# name: test_base_color_element_add_lum_off
  '''
  <a:schemeClr xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" val="bg1">
    <a:lumOff val="40000"/>
  </a:schemeClr>
  
  '''
# ---
# name: test_base_color_element_clear_lum[lum_mod_removed]
  '''
  <a:schemeClr xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" val="bg1"/>
  
  '''
# ---
# name: test_base_color_element_clear_lum[lum_off_removed]
  '''
  <a:schemeClr xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" val="bg1"/>
  
  '''
# ---
# name: test_ct_scheme_color_behaviors
  '''
  <a:schemeClr xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" val="accent1"/>
  
  '''
# ---
# name: test_ct_srgb_color_behaviors
  '''
  <a:srgbClr xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" val="987654"/>
  
  '''
# ---
